@@ -55,6 +55,7 @@ add_subdirectory(plugins/soundkonverter_codec_faac)
 add_subdirectory(plugins/soundkonverter_codec_neroaac)
 add_subdirectory(plugins/soundkonverter_codec_timidity)
 add_subdirectory(plugins/soundkonverter_codec_wavpack)
+add_subdirectory(plugins/soundkonverter_codec_shorten)
 add_subdirectory(plugins/soundkonverter_replaygain_vorbisgain)
 add_subdirectory(plugins/soundkonverter_replaygain_metaflac)
 add_subdirectory(plugins/soundkonverter_replaygain_mp3gain)
